sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort:3: error: not found: value ecart
  ecart=getNombreValeurs()
  ^AlgCombSort:6: error: not found: value ecart
  while (ecart>1 || stop!=true){
         ^AlgCombSort:7: error: not found: value ecart
    if (ecart>1){
        ^AlgCombSort:8: error: not found: value ecart
      ecart=(ecart.toDouble/1.3).toInt
      ^AlgCombSort:14: error: not found: value ecart
    while(i+ecart<getNombreValeurs()){
            ^AlgCombSort:15: error: not found: value ecart
      if (plusPetit(i+ecart,i)){
                      ^AlgCombSort:16: error: not found: value ecart
        echange(i+ecart,i)
                  ^AlgCombSort:22: error: type mismatch;
 found   : Boolean(true)
 required: Int
      echanger=true
               ^